[gd_scene load_steps=13 format=2]

[ext_resource path="res://DATA/SCRIPTS/OBJECTS/WARP_PORTAL.gd" type="Script" id=1]
[ext_resource path="res://DATA/SPRITES/PORTAL.png" type="Texture" id=2]
[ext_resource path="res://DATA/SPRITES/PORTAL_PULSE.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 125.0

[sub_resource type="Gradient" id=2]

offsets = PoolRealArray( 0, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0, 0.953125, 1, 1 )

[sub_resource type="GradientTexture" id=3]

flags = 4
gradient = SubResource( 2 )
width = 2048

[sub_resource type="Curve" id=4]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.457031 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]

flags = 4
width = 2048
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 500.0
initial_velocity_random = 1.0
angular_velocity = 300.0
angular_velocity_random = 0.0
orbit_velocity = 1.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 30.0
scale_random = 1.0
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angular Velocity", "Color", "Scale" ]

[sub_resource type="Animation" id=7]

length = 10.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("FRAME:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SPR:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=8]

resource_name = "in"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 4, 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( -128, 0 ), Vector2( -128, -168 ) ]
}

[sub_resource type="Animation" id=9]

resource_name = "out"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 4, 1 ),
"update": 0,
"values": [ Vector2( 4, 4 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 4, 1 ),
"update": 0,
"values": [ Vector2( -128, -168 ), Vector2( -128, 0 ) ]
}

[node name="WARP_PORTAL" type="Node2D"]

position = Vector2( 490.917, 591.617 )
scale = Vector2( 3.5, 3.5 )
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
scene_id = 0

[node name="AREA" type="Area2D" parent="." index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="COL" type="CollisionShape2D" parent="AREA" index="0"]

shape = SubResource( 1 )

[node name="SPR" type="Sprite" parent="." index="1"]

modulate = Color( 1, 1, 1, 0.171294 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="FRAME" type="Sprite" parent="." index="2"]

texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="PART" type="Particles2D" parent="." index="3"]

emitting = true
amount = 600
lifetime = 1.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -9000, -9000, 18000, 18000 )
local_coords = false
draw_order = 0
process_material = SubResource( 6 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Process Material" ]

[node name="ANIM" type="AnimationPlayer" parent="." index="4"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/ROTATION = SubResource( 7 )
blend_times = [  ]

[node name="WARP_TIME" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="LVL_NAME" type="Label" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -128.0
margin_right = 128.0
margin_bottom = 14.0
rect_scale = Vector2( 0, 0 )
rect_pivot_offset = Vector2( 128, 7 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "TEST MAP"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="ANIM" type="AnimationPlayer" parent="LVL_NAME" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/in = SubResource( 8 )
anims/out = SubResource( 9 )
blend_times = [  ]

[connection signal="body_entered" from="AREA" to="." method="_on_AREA_body_entered"]

[connection signal="body_exited" from="AREA" to="." method="_on_AREA_body_exited"]

[connection signal="timeout" from="WARP_TIME" to="." method="_on_WARP_TIME_timeout"]


